<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>edu.hm.hafner</groupId>
    <artifactId>codingstyle-pom</artifactId>
    <version>6.1.0</version>
    <relativePath/>
  </parent>

  <groupId>edu.hm.hafner</groupId>
  <artifactId>autograding-gitlab-action</artifactId>
  <version>5.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Autograding GitLab Action</name>
  <description>
    This GitLab pipeline action autogrades projects based on a configurable set of metrics
    and gives feedback on pull requests (or single commits) in GitLab.
    I use this action to automatically grade student projects in my lectures
    at the Munich University of Applied Sciences.
  </description>

  <scm>
    <connection>scm:git:https://github.com/uhafner/autograding-gitlab-action.git</connection>
    <developerConnection>scm:git:git@github.com:uhafner/autograding-gitlab-action.git</developerConnection>
    <url>https://github.com/uhafner/autograding-gitlab-action</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <module.name>${project.groupId}.autograding.gitlab.action</module.name>
    <docker-image-tag>${project.version}</docker-image-tag>
    <docker-image-baseline>v4</docker-image-baseline>

    <java.version>25</java.version>

    <autograding-model.version>10.3.0</autograding-model.version>
    <gitlab4j-api.version>6.2.0</gitlab4j-api.version>
    <testcontainers.version>2.0.3</testcontainers.version>

    <jib-maven-plugin.version>3.5.1</jib-maven-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>edu.hm.hafner</groupId>
      <artifactId>autograding-model</artifactId>
      <version>${autograding-model.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.errorprone</groupId>
          <artifactId>error_prone_annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
        </exclusion>
        <exclusion>
          <artifactId>codingstyle</artifactId>
          <groupId>edu.hm.hafner</groupId>
        </exclusion>
        <exclusion>
          <artifactId>streamex</artifactId>
          <groupId>one.util</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.gitlab4j</groupId>
      <artifactId>gitlab4j-api</artifactId>
      <version>${gitlab4j-api.version}</version>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-annotations</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>@{argLine} --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <mainClass>edu.hm.hafner.grading.gitlab.ResultCrawler</mainClass>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>${jib-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>local-docker</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>dockerBuild</goal>
            </goals>
          </execution>
          <execution>
            <id>docker-io</id>
            <phase>install</phase>
            <goals>
              <goal>build</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <container>
            <mainClass>edu.hm.hafner.grading.gitlab.GitLabAutoGradingRunner</mainClass>
          </container>
          <to>
            <image>docker.io/uhafner/autograding-gitlab-action</image>
            <tags>
              <tag>${docker-image-tag}</tag>
              <tag>v${docker-image-tag}</tag>
<!--              <tag>${docker-image-baseline}</tag>-->
            </tags>
            <auth>
              <username>${env.DOCKER_IO_USERNAME}</username>
              <password>${env.DOCKER_IO_PASSWORD}</password>
            </auth>
          </to>
          <from>
            <image>maven:3.9.12-eclipse-temurin-25-alpine</image>
            <platforms>
              <platform>
                <architecture>amd64</architecture>
                <os>linux</os>
              </platform>
              <platform>
                <architecture>arm64</architecture>
                <os>linux</os>
              </platform>
            </platforms>
          </from>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.revapi</groupId>
        <artifactId>revapi-maven-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
